<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accent">Accent</string>
    <string name="accessibility_create_phrase_to_here">Create phrase to here</string>
    <string name="accessibility_start_phrase_selection">Start phrase selection</string>
    <string name="activities_almost">Almost!</string>
    <string name="activities_correct">Correct!</string>
    <string name="activities_flip_card">Flip Card</string>
    <string name="activities_incorrect">Incorrect</string>
    <string name="activities_new_session">New Session</string>
    <string name="activities_nice_work">Nice work!</string>
    <string name="activities_no_lingqs">No LingQs</string>
    <string name="activities_not_enough_lingqs">You do not have enough LingQs for this review. You need four(4) or more LingQs for this review or enable other review activities.</string>
    <string name="activities_one_selected_activity">You need to have at least one activity selected</string>
    <string name="activities_return_to_lesson">Return to Lesson</string>
    <string name="activities_select_meaning">Select the correct meaning.</string>
    <string name="activities_select_meaning_match">Select the term that matches the given meaning.</string>
    <string name="activities_select_missing_word">Select the missing word.</string>
    <string name="activities_select_one_activity">Please select at least one activity</string>
    <string name="activities_select_word_hear">Select the word you hear.</string>
    <string name="activities_select_word_meaning_hear">Select the meaning of the word you hear.</string>
    <string name="activities_settings">Activities Settings</string>
    <string name="activities_settings_input_cards">Input number of cards</string>
    <string name="activities_skip_activity">Skip</string>
    <string name="activities_submit_answer">Submit</string>
    <string name="activities_terms_studied">Terms Studied</string>
    <string name="activities_text_activities">Activities</string>
    <string name="activities_you_answered">You answered</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">LingQ</string>
    <string name="app_settings_rate_prompt">Show us some love!</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive_confirmation_title">Archive this content?</string>
    <string name="archive_course_confirmation">This course and all of its lessons will be hidden from your library and moved to your Archive shelf. Nothing is deleted, and you can restore it at any time.</string>
    <string name="archive_lesson_confirmation">This lesson will be hidden from your library and moved to your Archive shelf. Nothing is deleted, and you can restore it at any time.</string>
    <string name="asset_statements">[{ \"include\": \"https://www.lingq.com/.well-known/assetlinks.json\" }]</string>
    <string name="audio_pause">Pause</string>
    <string name="audio_play">Play</string>
    <string name="audio_shuffle">Shuffle</string>
    <string name="audio_speed">Speed</string>
    <string name="beta_language_banner">%s is in incubation. All lessons are community generated.</string>
    <string name="beta_language_desc">Please be aware that %1$s is in Incubation on LingQ. LingQ staff do not add nor edit content for this language. All lessons have been community generated. To help improve %2$s for all users, please consider becoming a Librarian and sharing your favourite content.</string>
    <string name="beta_language_title">Language in Incubation</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse</string>
    <string name="bottomsheet_action_collapse_description">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand</string>
    <string name="bottomsheet_action_expand_description">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_action_half_expand_description">Half expand the bottom sheet</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bottomsheet_state_collapsed">Collapsed</string>
    <string name="bottomsheet_state_expanded">Expanded</string>
    <string name="bottomsheet_state_half_expanded">Half expanded</string>
    <string name="button_go_back">Go Back</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="card_add_lingq_for_term">Add LingQ for term</string>
    <string name="card_check_dictionary">Dictionaries</string>
    <string name="card_contains">Contains</string>
    <string name="card_dictionaries">Dictionaries</string>
    <string name="card_dictionary_locales">Dictionary Locales</string>
    <string name="card_ends_with">Ends with</string>
    <string name="card_enter_notes">Type your notes here…</string>
    <string name="card_flag_hint">Flag</string>
    <string name="card_ignore_this_word">Ignore</string>
    <string name="card_meaning_containing">Meaning Containing</string>
    <string name="card_no_dictionaries_enabled">No dictionaries enabled.</string>
    <string name="card_no_popular_meanings_available">No popular meanings available. Please check dictionaries.</string>
    <string name="card_notes">Notes</string>
    <string name="card_only_phrases">Phrases</string>
    <string name="card_phrase_contains">Phrase containing</string>
    <string name="card_popular_meanings">Popular Meanings</string>
    <string name="card_report">Report</string>
    <string name="card_search_term">Search Term</string>
    <string name="card_sort_alpha">A-Z</string>
    <string name="card_sort_created">Creation Date</string>
    <string name="card_sort_importance">Importance</string>
    <string name="card_sort_status">Status</string>
    <string name="card_srs_Date">SRS Date</string>
    <string name="card_srs_due">SRS Due</string>
    <string name="card_starts_with">Starts with</string>
    <string name="card_status_familiar">Familiar</string>
    <string name="card_status_known">Known</string>
    <string name="card_status_learned">Learned</string>
    <string name="card_status_new">New</string>
    <string name="card_status_recognized">Recognized</string>
    <string name="card_type_new_meaning_here">Type a new meaning here</string>
    <string name="card_view_dictionaries_and_meanings">View Dictionaries and Meanings</string>
    <string name="challenge_add_new_book">Add New Book</string>
    <string name="export_all_lingqs">Export All LingQs</string>
    <string name="export_all_lingqs_to_anki">Export All LingQs to Anki</string>
    <string name="export_to_anki">Export to Anki</string>
    <string name="feed_import">Import</string>
    <string name="feed_imports">Imports</string>
    <string name="feed_library">Library</string>
    <string name="help_brief_overview">Brief Overview Tutorial</string>
    <string name="help_brief_overview_description">How to learn a language on LingQ</string>
    <string name="help_create_lessons">How to create your lessons</string>
    <string name="help_customize_lingQ">How to customize LingQ</string>
    <string name="help_find_content">How to find content</string>
    <string name="help_how_to_earn_coins">How to Earn Coins</string>
    <string name="help_how_to_earn_coins_description">How the Daily Goal &amp; Streak works</string>
    <string name="help_natives_speak">Learn how natives speak</string>
    <string name="help_personal_database">Your personal database of words and phrases</string>
    <string name="help_playlists_description">Listen &amp; learn on the go</string>
    <string name="help_study_lessons">How to study lessons</string>
    <string name="help_track_progress">Track your progress</string>
    <string name="help_videos">Help Videos</string>
    <string name="lingq_course_name">Course Name</string>
    <string name="lingq_new_course">New Course</string>
    <string name="lingq_playlist">Playlist</string>
    <string name="lingq_vocabulary">Vocabulary</string>
    <string name="playlist_playlists">Playlists</string>
    <string name="promoted_course_learn_more">Learn more</string>
    <string name="quickstart_advanced_reader">Advanced Reader</string>
    <string name="report_audio_problems">Audio problems - Poor quality, audio missing, not matching audio</string>
    <string name="report_offensive_content">Offensive content</string>
    <string name="report_other">Other</string>
    <string name="report_poor_quality_transcript">Poor quality transcript</string>
    <string name="report_reason">Type a reason here</string>
    <string name="settings_not_interest_feedback">Library Feedback</string>
    <string name="settings_not_interest_feedback_message">"Your \"Not interested\" and \"Don't recommend\" feedback is used for your Library recommendations."</string>
    <string name="settings_reader">Reader</string>
    <string name="settings_text_settings">Settings</string>
    <string name="stats_stats">Stats</string>
    <string name="texts_email_support">Email Support</string>
    <string name="texts_how_to_use_lingq">How to use LingQ</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_delete">Delete</string>
    <string name="ui_done">Done</string>
    <string name="ui_more">More</string>
    <string name="vocabulary_export">Export</string>
</resources>