<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="end" android:orientation="horizontal" android:id="@id/tvLogout" android:paddingTop="@dimen/list_vertical_margin" android:paddingBottom="@dimen/list_vertical_margin" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground" android:paddingStart="@dimen/activity_horizontal_margin" android:paddingEnd="@dimen/activity_horizontal_margin"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/tvTitle" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/settings_not_interest_feedback" android:layout_alignParentStart="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/BodyLarge" />
    <TextView android:id="@id/tvMessage" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/settings_not_interest_feedback_message" android:layout_alignParentStart="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitle" style="@style/BodyMedium" />
    <TextView android:textColor="?blueTint" android:id="@id/btnLearnMore" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_standard" android:text="@string/promoted_course_learn_more" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/tvMessage" style="@style/LabelMedium" />
    <TextView android:textColor="?blueTint" android:id="@id/btnDelete" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_standard" android:text="@string/ui_delete" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvMessage" style="@style/LabelMedium" />
</androidx.constraintlayout.widget.ConstraintLayout>
