<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/viewOutside" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="30.0dp" android:layout_marginEnd="30.0dp" app:cardBackgroundColor="?colorSurfaceContainer" app:cardCornerRadius="10.0dp" app:cardElevation="12.0dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/BodyMedium" android:id="@id/btnSettings" android:paddingTop="@dimen/list_vertical_margin" android:paddingBottom="@dimen/list_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground" android:text="@string/settings_text_settings" android:paddingStart="@dimen/spacing_high" android:paddingEnd="@dimen/spacing_high" />
            <TextView android:textAppearance="@style/BodyMedium" android:id="@id/btnExport" android:paddingTop="@dimen/list_vertical_margin" android:paddingBottom="@dimen/list_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground" android:text="@string/vocabulary_export" android:paddingStart="@dimen/spacing_high" android:paddingEnd="@dimen/spacing_high" />
            <TextView android:textAppearance="@style/BodyMedium" android:id="@id/btnExportAll" android:paddingTop="@dimen/list_vertical_margin" android:paddingBottom="@dimen/list_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground" android:text="@string/export_all_lingqs" android:paddingStart="@dimen/spacing_high" android:paddingEnd="@dimen/spacing_high" />
            <TextView android:textAppearance="@style/BodyMedium" android:id="@id/btnExportAnki" android:paddingTop="@dimen/list_vertical_margin" android:paddingBottom="@dimen/list_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground" android:text="@string/export_to_anki" android:paddingStart="@dimen/spacing_high" android:paddingEnd="@dimen/spacing_high" />
            <TextView android:textAppearance="@style/BodyMedium" android:id="@id/btnExportAllAnki" android:paddingTop="@dimen/list_vertical_margin" android:paddingBottom="@dimen/list_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground" android:text="@string/export_all_lingqs_to_anki" android:paddingStart="@dimen/spacing_high" android:paddingEnd="@dimen/spacing_high" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
